--- a/main.html
+++ b/main.html
@@ -7,7 +7,50 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student --><form action="#" method="POST">
+        <h2>Job Application Form</h2>
+		<div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        </div><br>
+		<div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        </div><br>
+		<div>
+        <label>Gender:</label>
+        <input type="radio" id="male" name="gender" value="Male" required>
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" value="Female" required>
+        <label for="female">Female</label>
+		</div><br>
+        <div>
+        <label for="laptop">Laptop Brands:</label>
+        <select id="laptop" name="laptop">
+            <option value="Apple">Apple</option>
+            <option value="Asus">Asus</option>
+            <option value="HP">HP</option>
+        </select>
+		</div><br>
+		<div>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" required>
+</div><br>
+		<div>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" name="dob" required>
+</div><br>
+		<div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+</div><br>
+		<div>
+        <label for="portfolio">Portfolio URL:</label>
+        <input type="url" id="portfolio" name="portfolio">
+</div><br>
+		<div>
+        <input type="submit" value="Submit">
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
