--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
         <input type="url" id="portfolio" name="portfolio">
 </div><br>
 		<div>
-        <input type="submit" value="Submit">
+        <button type="submit">Submit</button>
     </form>
     <script type="text/javascript" src="./script.js">
 </script>
